# pdfviewer-template

./: .clang-tidy  CMakeLists.txt  README.md
3rdpart/poppler-win64/include/poppler/qt6/: poppler-version.h
src/: mainwindow.cpp  mainwindow.h
src/controller/: CoreController.cpp  CoreController.h
src/controller/command/: Command.cpp  Command.h  OpenFileCommand.cpp  OpenFileCommand.h
src/delegate/: Delegate.h  OpenFileDelegate.cpp  OpenFileDelegate.h
src/model/: DocumentModel.cpp  DocumentModel.h
